--- a/styles/style.css
+++ b/styles/style.css
@@ -3,42 +3,64 @@
   padding: 0;
   text-decoration: none;
   list-style: none;
-  font-family: sans-serif;
+  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+  transition: all 400ms ease;
 }
 
 :root {
   /* Primary Colors */
-  --primary-bg: linear-gradient(to left, #07c15b, #225629);
-  /* Green gradient for primary sections */
+  --primary-bg: linear-gradient(to right, #07c15b, #225629);
   --secondary-bg: #c1ff72;
-  /* Light green for secondary sections or highlights */
 
   /* Neutral Colors */
   --white-bg: #fff8e6;
-  /* Light background for cards and section dividers */
+  --dark-green-bg: #225629;
+  --light-green-bg: #07c15b;
   --light-grey: #ececec;
-  /* Light grey for subtle dividers or backgrounds */
 
   /* Text Colors */
   --primary-text: #225629;
-  /* Darker green for headings or emphasized text */
   --secondary-text: #07c15b;
-  /* Light green text for minor headings or accents */
   --white-text: #ffffff;
-  /* White text for contrast on darker backgrounds */
+  --dark-text: #000000;
 
   /* Button colors */
   --button-bg: #225629;
   --button-bg-hover: #07c15b;
 
   /* Padding */
-  --container-padding: 0 10rem;
-  /* Padding for main container layout */
+  --container-padding: 5rem 10rem;
+}
+
+.btn {
+  background-color: var(--button-bg);
+}
+
+.btn:hover {
+  background-color: var(--button-bg-hover);
+}
+
+.container header {
+  position: static;
+}
+
+.container {
+  padding: 5rem 0;
+}
+
+.container header,
+.container h2 {
+  color: var(--primary-text);
+  background: transparent;
 }
 
 /* ============================= HEADER
  =============================*/
 header {
+  position: fixed;
+  left: 0;
+  right: 0;
+  top: 0;
   padding: 0.3rem 2rem;
   background: wheat;
 }
@@ -58,8 +80,17 @@ header nav ul {
   gap: 3rem;
 }
 
-header nav ul li:last-child {
+header nav ul li a {
+  color: var(--dark-text);
+  font-weight: bold;
+  text-transform: uppercase;
+}
+
+header nav ul li:last-child a {
   background: var(--button-bg);
+  padding: 0.7rem 1rem;
+  color: var(--white-text);
+  border-radius: 100px;
 }
 
 header .logo img {
@@ -78,40 +109,30 @@ header .user-profile img {
 }
 
 .hero {
-  /* padding: 5rem 10rem; */
-  /* height: 100%; */
-  /* Correctly layer the image and background color */
-  /* background: */
-  /* url(../assets/bg-image.png) right -5rem no-repeat, */
-  /* var(--primary-bg); */
-  /* or you can use a gradient here if needed */
-
-  /* background-size: 50rem; */
+  background: var(--primary-bg);
+  padding: 0rem 0rem;
 }
 
-.hero {
-  padding: 5rem 10rem;
-  height: 100%;
-  position: relative;
-  display: flex;
-  align-items: center;
-  justify-content: space-between;
-
-  background: red;
-  /* Combine the gradient and the image */
-  background:
-    url(../assets/bg-image.png) right -5rem no-repeat,
-    linear-gradient(to right, rgba(7, 193, 91, 0.9), rgba(34, 86, 41, 0.9));
-
-  background-size: cover;
-  /* background-position: right -5rem; */
+.hero-bg {
+  padding: 0rem 10rem;
+  height: 100vh;
+  background-image: url(../assets/bg-image.png);
+  background-position-x: right;
+  /* linear-gradient(to right, rgba(7, 193, 91, 0.9), rgba(34, 86, 41, 0.9)); */
   background-repeat: no-repeat;
+  background-size: cover;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  background-position-y: -4rem;
 }
 
 .hero-text {
   background: transparent;
-  display: inline-flex;
+  display: flex;
+
   flex-direction: column;
+  justify-content: center;
   gap: 0.7rem;
   color: white;
   padding: 2rem;
@@ -145,7 +166,58 @@ header .user-profile img {
 
 /* ============================= FEATURES SECTION
 =============================*/
-/* Start coding */
+.features {
+  padding: var(--container-padding);
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 2rem;
+}
+
+/* .features { */
+
+.features .features-list {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-content: center;
+  gap: 3rem;
+}
+
+.features .feature-card {
+  display: flex;
+  padding: 3rem;
+  width: 100%;
+  flex-direction: column;
+  justify-content: center;
+  align-content: center;
+  text-align: center;
+  box-shadow: 0px 5px 5px 5px black;
+}
+
+.features .feature-card:nth-child(1) {
+  background-color: var(--light-green-bg);
+}
+
+.features .feature-card:nth-child(2) {
+  background-color: var(--white-bg);
+}
+
+.features .feature-card:nth-child(3) {
+  background-color: var(--dark-green-bg);
+}
+/* .feature-card */
+.features .feature-card:nth-child(3):hover{
+  background: red;
+  transform: scale3d(2px);
+}
+.features .feature-card h4 {
+  font-size: 2rem;
+}
+
+.features .feature-card img {
+  width: 10rem;
+}
 
 
 /* ============================= DIET PLAN SECTION
