Login and signup page

--- a/styles/style.css
+++ b/styles/style.css
@@ -169,8 +169,8 @@ header .user-profile img {
   padding: 2rem 6rem;
 }
 
-.diet-logo {
-  width: 1rem;
+img {
+  width: 200px;
 }
 
 /* ============================= FEATURES SECTION
