--- a/styles/responsive.css
+++ b/styles/responsive.css
@@ -40,11 +40,6 @@
     flex-direction: column;
   }
 
-  /* header nav ul {
-    flex-direction: column;
-    gap: 1rem;
-  } */
-
   /* ============================= FEATURES SECTION
 =============================*/
   .features {
@@ -78,69 +73,525 @@
     color: var(--dark-text);
     padding: 0;
   }
-  .features .feature-card .img i{
+
+  .features .feature-card .img i {
     margin: 0;
     font-size: 4rem;
   }
-    /* ============================= DIET PLAN SECTION
+
+  /* ============================= DIET PLAN SECTION
   =============================*/
-    .dietPlan {
-      padding: var(--small-container-padding);
-      display: flex;
-      flex-direction: column;
-      align-items: center;
-      gap: 1rem;
-    }
-  
-    .dietPlan .dietPlan-list {
-      display: flex;
-      flex-direction: row;
-      justify-content: center;
-      align-content: center;
-      gap: 1rem;
-  
-    }
-  
-    .dietPlan .dietPlan-card {
-      min-width: 150px;
-    }
-  
-  
-    .dietPlan .dietPlan-card .text {
-      padding: 1rem 1rem;
-    }
-  
-    .dietPlan .dietPlan-card h4 {
-      font-size: 1.2rem;
-      margin-bottom: 0.5rem;
-    }
-  
-    .dietPlan .dietPlan-card img {
-      border-top-right-radius: 1rem;
-      border-top-left-radius: 1rem;
-    }
-  
-    .dietPlan .dietPlan-card img {
-      width: 100%;
-      height: 12rem;
-      height:auto;
-    }
+  .dietPlan {
+    padding: var(--small-container-padding);
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap: 1rem;
+  }
+
+  .dietPlan .dietPlan-list {
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-content: center;
+    gap: 1rem;
+
+  }
+
+  .dietPlan .dietPlan-card {
+    min-width: 150px;
+  }
+
+
+  .dietPlan .dietPlan-card .text {
+    padding: 1rem 1rem;
+  }
+
+  .dietPlan .dietPlan-card h4 {
+    font-size: 1.2rem;
+    margin-bottom: 0.5rem;
+  }
+
+  .dietPlan .dietPlan-card img {
+    border-top-right-radius: 1rem;
+    border-top-left-radius: 1rem;
+  }
+
+  .dietPlan .dietPlan-card img {
+    width: 100%;
+    height: 12rem;
+    height: auto;
+  }
+
+  /* ============================= TESTIMONIAL SECTION
+     =============================*/
+  .testimonials {
+    padding: var(--small-container-padding);
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    gap: 0rem;
+    background-color: var(--extra-bg);
+  }
+
+  .testimonials .testimonial-card {
+    display: flex;
+    padding: 0rem;
+    width: 50%;
+    flex-direction: column;
+    justify-content: center;
+    align-content: center;
+    text-align: center;
+    border: 1px solid var(--button-bg);
+    margin: auto;
+  }
+
+  .testimonials .testimonial-card:hover {
+    box-shadow: 0px 5px 5px 5px black;
+  }
+
+  .testimonials .testimonial-card .text {
+    padding: 0rem 0rem;
+  }
+
+  .testimonials .testimonial-card h4 {
+    font-size: 1.5rem;
+    margin-bottom: 0.3rem;
+  }
+
+  .testimonials h1 {
+    /* background: red; */
+    padding: 1rem;
+    height: 1rem;
+  }
+
+  .testimonials .text {
+    width: 20%;
+  }
+
+  .testimonials .text p {
+    background: red;
+    width: 20%;
+  }
+
+  .testimonials .testimonial-card .img {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    width: 50%;
+  }
+
+  .testimonials .testimonial-card img {
+    width: 50%;
+    border-radius: 50%;
+    /* width: 10%; */
+    /* height: 12rem; */
+  }
+
+  .testimonials .btn {
+    padding: 1rem 3rem;
+    font-size: large;
+    font-weight: bold;
+    color: white;
+    border-radius: 100px;
+  }
+
+
+  .swiper-container {
+    overflow: hidden;
+    margin: auto;
+    margin: auto;
+  }
+
+  .main-swiper {
+    height: 300px;
+    width: 50%;
+    padding: 0 1rem;
+    height: auto;
+    margin: auto;
+    margin-bottom: 0;
+  }
+
+  .thumb-swiper .swiper-slide {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: center;
+    width: 50px;
+    height: auto;
+    opacity: 0.4;
+    padding: 0;
+    margin: 0;
+    transition: opacity 0.3s;
+    margin: auto;
+  }
+
+  .thumb-swiper .swiper-slide {
+    width: 50px;
+    margin: auto;
+    height: auto;
+    opacity: 0.4;
+    transition: opacity 0.3s;
+    font-size: 2rem;
+    padding: 0;
+    margin: 0;
+  }
+
+  .thumb-swiper .swiper-slide-thumb-active {
+    opacity: 1;
+    color: #225629;
+  }
+
+
+  /* ============================= GET STARTED SECTION
+        =============================*/
+  .getting-started {
+    grid-template-columns: 1fr;
+    gap: 5rem;
+  }
+
+  /* ============================= CALL TO ACTION SECTION
+ =============================*/
+  /* CTA Section */
+  .cta {
+    text-align: left;
+    padding: 1rem;
+    margin: auto;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+  }
+
+
+  .cta-content {
+    display: grid;
+    grid-template-columns: 2fr 1fr;
+    width: 80%;
+    padding: 2rem;
+  }
+
+  .cta h2 {
+    font-size: 2em;
+  }
+
+  .cta p {
+    font-size: larger;
+  }
 }
 
 @media (max-width: 480px) {
+
+  /* ============================= HERO SECTION
+   =============================*/
+  .hero {
+    background: var(--primary-bg);
+    padding: 0rem 0rem;
+  }
+
+  .hero-bg {
+    padding: 0rem;
+    height: 100vh;
+    background-position-x: -17rem;
+    background-position-y: 0;
+  }
+
+  /* hero section bg style */
+  .hero-bg {
+    padding: 0rem 0rem;
+    height: 100vh;
+    background-size: 150%;
+    background-position-x: right;
+    background-position-y: 3rem;
+  }
+  
+  .hero-text {
+    height: 100vh;
+    display: unset;
+    margin-top: 23rem;
+    padding: 1rem;
+  }
+
   .hero-text h1 {
+    font-size: 3rem;
+  }
+
+  .hero-text h3 {
     font-size: 1.5rem;
   }
 
-  .hero-text p {
-    font-size: 0.9rem;
-  }
-
-  header nav ul li:last-child a {
-    padding: 0.5rem;
-  }
-
+  /* ============================= ABOUT SECTION
+   =============================*/
   .about-content {
+    display: flex;
+    gap: 2rem;
     flex-direction: column;
   }
+
+  .about .aboutTxt,
+  .about strong {
+    font-size: 15px;
+  }
+
+  /* I've change the unit from px to rem */
+  img {
+    width: 15rem;
+  }
+
+  /* ============================= FEATURES SECTION
+  =============================*/
+  .features {
+    gap: 1rem;
+    padding: var(--small-container-padding);
+    padding: 1rem;
+  }
+
+  .features .features-list {
+    display: flex;
+    flex-direction: column;
+    gap: 1rem;
+  }
+
+  .features .feature-card {
+    padding: 1rem;
+    width: auto;
+  }
+
+  .features .feature-card h4 {
+    font-size: 1.9rem;
+  }
+  .features .feature-card p {
+    font-size: large;
+  }
+
+  .features .feature-card .img i {
+    margin: 0;
+    font-size: 5rem;
+  }
+
+  /* ============================= DIET PLAN SECTION
+    =============================*/
+  .dietPlan {
+    padding: var(--small-container-padding);
+    padding: 1rem;
+    gap: 1rem;
+  }
+
+  .dietPlan .dietPlan-list {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-content: center;
+    gap: 1rem 0;
+
+  }
+
+  .dietPlan .dietPlan-card {
+    min-width: 150px;
+  }
+
+
+  .dietPlan .dietPlan-card .text {
+    padding: 1rem 1rem;
+  }
+
+  .dietPlan .dietPlan-card h4 {
+    font-size: 1.9rem;
+    margin-bottom: 0.5rem;
+  }
+  .dietPlan .dietPlan-card p{
+    font-size: large;
+  }
+
+  .dietPlan .dietPlan-card img {
+    border-top-right-radius: 1rem;
+    border-top-left-radius: 1rem;
+  }
+
+  .dietPlan .dietPlan-card img {
+    width: 100%;
+    height: 12rem;
+    height: auto;
+  }
+
+  /* ============================= TESTIMONIAL SECTION
+       =============================*/
+  .testimonials {
+    padding: var(--small-container-padding);
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    gap: 0rem;
+    background-color: var(--extra-bg);
+  }
+
+  .testimonials .testimonial-card {
+    display: flex;
+    padding: 0rem;
+    width: 50%;
+    flex-direction: column;
+    justify-content: center;
+    align-content: center;
+    text-align: center;
+    border: 1px solid var(--button-bg);
+    margin: auto;
+  }
+
+  .testimonials .testimonial-card:hover {
+    box-shadow: 0px 5px 5px 5px black;
+  }
+
+  .testimonials .testimonial-card .text {
+    padding: 0rem 0rem;
+  }
+
+  .testimonials .testimonial-card h4 {
+    font-size: 1.5rem;
+    margin-bottom: 0.3rem;
+  }
+
+  .testimonials h1 {
+    /* background: red; */
+    padding: 1rem;
+    height: 1rem;
+  }
+
+  .testimonials .text {
+    width: 20%;
+  }
+
+  .testimonials .text p {
+    background: red;
+    width: 20%;
+  }
+
+  .testimonials .testimonial-card .img {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    width: 50%;
+  }
+
+  .testimonials .testimonial-card img {
+    width: 50%;
+    border-radius: 50%;
+    /* width: 10%; */
+    /* height: 12rem; */
+  }
+
+  .testimonials .btn {
+    padding: 1rem 3rem;
+    font-size: large;
+    font-weight: bold;
+    color: white;
+    border-radius: 100px;
+  }
+
+
+  .swiper-container {
+    overflow: hidden;
+    margin: auto;
+    margin: auto;
+  }
+
+  .main-swiper {
+    height: 300px;
+    width: 50%;
+    padding: 0 1rem;
+    height: auto;
+    margin: auto;
+    margin-bottom: 0;
+  }
+
+  .thumb-swiper .swiper-slide {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: center;
+    width: 50px;
+    height: auto;
+    opacity: 0.4;
+    padding: 0;
+    margin: 0;
+    transition: opacity 0.3s;
+    margin: auto;
+  }
+
+  .thumb-swiper .swiper-slide {
+    width: 50px;
+    margin: auto;
+    height: auto;
+    opacity: 0.4;
+    transition: opacity 0.3s;
+    font-size: 2rem;
+    padding: 0;
+    margin: 0;
+  }
+
+  .thumb-swiper .swiper-slide-thumb-active {
+    opacity: 1;
+    color: #225629;
+  }
+
+
+  /* ============================= GET STARTED SECTION
+          =============================*/
+  .getting-started {
+    grid-template-columns: 1fr;
+    gap: 5rem;
+  }
+.getting-started ul {
+  display: grid;
+  gap: 2rem;
+  grid-template-columns: repeat(1, 1fr);
+}
+  /* ============================= CALL TO ACTION SECTION
+   =============================*/
+  /* CTA Section */
+  .cta {
+    text-align: left;
+    padding: 1rem;
+    margin: auto;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+  }
+
+
+  .cta-content {
+    display: grid;
+    grid-template-columns: 1fr;
+    width: 80%;
+    padding: 2rem;
+    gap: 3rem;
+  }
+
+  .cta h2 {
+    font-size: 2em;
+  }
+
+  .cta p {
+    font-size: larger;
+  }
+/* ============================= FOOTER SECTION
+ =============================*/
+.footer {
+  background-color: #333;
+  background: var(--primary-bg);
+  /* background: wheat; */
+  color: white;
+  text-align: center;
+  display: flex;
+  padding: var(--container-padding);
+  padding-top: 2rem;
+  padding-bottom: 2rem;
+  flex-direction: column;
+  justify-content: space-between;
+  align-items: center;
+}
 }
