--- a/styles/login_sign-up.css
+++ b/styles/login_sign-up.css
@@ -27,21 +27,20 @@
   --container-padding: 50px;
 
   /* Gradient color*/
-  --gradient-border: linear-gradient(
-    to right,
-    #a8e6cf,
-    #dcedc1,
-    #ffd54f,
-    #ffab91,
-    #ff8c94
-  );
+  --gradient-border: linear-gradient(to right,
+      #a8e6cf,
+      #dcedc1,
+      #ffd54f,
+      #ffab91,
+      #ff8c94);
 }
 
 .signup-container {
   border: 5px solid;
   border-image: var(--gradient-border) 1;
   padding: 50px 14px 30px 0;
-  max-width: 300px; /* Limit the maximum width */
+  max-width: 300px;
+  /* Limit the maximum width */
   margin: 40px auto;
   text-align: center;
 }
@@ -50,10 +49,12 @@
   border: 5px solid;
   border-image: var(--gradient-border) 1;
   padding: 40px 14px 10px 0;
-  max-width: 300px; /* Limit the maximum width */
+  max-width: 300px;
+  /* Limit the maximum width */
   margin: 40px auto;
   text-align: center;
 }
+
 h1 {
   color: var(--primary-text);
   background: transparent;
@@ -69,7 +70,8 @@ img {
 .styled-form {
   padding: 20px;
   width: 225px;
-  border-radius: 4px; /* Rounded corners */
+  border-radius: 4px;
+  /* Rounded corners */
   margin: 0 auto;
 }
 
@@ -81,33 +83,39 @@ img {
   width: 100%;
   padding: 10px;
   margin-bottom: 15px;
-  background-color: var(
-    --light-text
-  ); /* Light grey background for the input area */
-  color: #000; /* Black text color */
-  border: 1px solid #555; /* Darker border for the input */
-  border-radius: 5px; /* Rounded corners for fields */
+  background-color: var(--light-text);
+  /* Light grey background for the input area */
+  color: #000;
+  /* Black text color */
+  border: 1px solid #555;
+  /* Darker border for the input */
+  border-radius: 5px;
+  /* Rounded corners for fields */
 }
 
 /* Submit button */
 .styled-form .submit {
   width: 50%;
   padding: 10px;
-  background-color: var(--button-bg); /* Dark grey button background */
-  color: #fff; /* White text on the button */
+  background-color: var(--button-bg);
+  /* Dark grey button background */
+  color: #fff;
+  /* White text on the button */
   border: none;
-  border-radius: 20px; /* Rounded corners */
+  border-radius: 20px;
+  /* Rounded corners */
   cursor: pointer;
-  text-align: center; /* Center text inside the button */
-  font-size: 16px; /* Font size for better readability */
+  text-align: center;
+  /* Center text inside the button */
+  font-size: 16px;
+  /* Font size for better readability */
   transition: background-color 0.3s ease;
 }
 
 /* Button hover effect */
 .styled-form .submit:hover {
-  background-color: var(
-    --button-bg-hover
-  ); /* Slightly lighter grey when hovered */
+  background-color: var(--button-bg-hover);
+  /* Slightly lighter grey when hovered */
 }
 
 /* Weight & Height*/
@@ -115,12 +123,14 @@ img {
   width: 38%;
   padding: 10px;
   margin-bottom: 15px;
-  background-color: var(
-    --light-text
-  ); /* Light grey background for the input area */
-  color: #000; /* Black text color */
-  border: 1px solid #555; /* Darker border for the input */
-  border-radius: 5px; /* Rounded corners for fields */
+  background-color: var(--light-text);
+  /* Light grey background for the input area */
+  color: #000;
+  /* Black text color */
+  border: 1px solid #555;
+  /* Darker border for the input */
+  border-radius: 5px;
+  /* Rounded corners for fields */
 }
 
 .sign-up-p {
@@ -132,10 +142,12 @@ img {
   color: var(--dark-text);
   padding: 40px 0 0;
 }
+
 a {
   color: var(--primary-text);
   text-decoration: underline;
 }
+
 a:hover {
   color: var(--button-bg);
   text-decoration: none;
