Handling the 'contactUs.css

--- a/styles/contactUs.css
+++ b/styles/contactUs.css
@@ -8,6 +8,7 @@
 
 :root {
   /* Neutral Colors */
+  --primary-bg: linear-gradient(to right, #07c15b, #225629);
   --dark-green-bg: #225629;
   --light-green-bg: #07c15b;
   --light-grey: #ececec;
@@ -23,7 +24,7 @@
   --button-bg: #225629;
 
   /* Padding */
-  --container-padding: 50px;
+  --container-padding: 5rem 10rem;
 
   /* Gradient color*/
   --gradient-border: linear-gradient(
@@ -126,12 +127,17 @@ header .user-profile img:hover {
 
 /* =================== FORM ====================*/
 
-.background-container{
-    background-image: url(../assets/bg-image.png);
+.background-container {
+  background-image: url(../assets/bg-image.png); /*here*/
+}
+
+h1 {
+  color: var(--light-green-bg);
+  padding: 0 0 20px 0;
+  text-align: center;
 }
 .contact-container {
   text-align: left;
-  border: 2px solid grey;
   padding: 120px 50px 30px 50px;
   width: 300px;
   font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS", sans-serif;
@@ -145,6 +151,83 @@ input[type="text"],
 input[type="email"] {
   width: 100%; /* Full width of the container */
   height: 40px; /* Height of the field */
-  padding: 8px; /* Add padding for better readability */
+  padding: 6px 8px; /* Add padding for better readability */
   font-size: 16px; /* Increase font size if needed */
+  border-radius: 6px;
+  border: 1px solid var(--dark-green-bg);
+}
+
+input[type="submit"] {
+  width: 50%;
+  padding: 10px;
+  background-color: var(--light-green-bg);
+  /* Dark grey button background */
+  color: #fff;
+  /* White text on the button */
+  border: none;
+  border-radius: 20px;
+  /* Rounded corners */
+  cursor: pointer;
+  text-align: center;
+  /* Center text inside the button */
+  font-size: 14px;
+  /* Font size for better readability */
+  transition: background-color 0.3s ease;
+}
+
+#message {
+  padding: 50px 7px; /* Increase padding for message field */
+  text-align: left;
+}
+
+
+/* ============================= FOOTER SECTION
+ =============================*/
+.footer {
+  background-color: #333;
+  background: var(--primary-bg);
+  /* background: wheat; */
+  color: white;
+  text-align: center;
+  display: flex;
+  padding: var(--container-padding);
+  padding-top: 2rem;
+  padding-bottom: 2rem;
+  flex-direction: row;
+  justify-content: space-between;
+  align-items: center;
+  font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
+}
+
+.footer-links {
+  padding: 0;
+}
+
+.footer-links li {
+  display: inline;
+}
+
+.footer-links a {
+  color: white;
+  text-decoration: none;
+  transition: color 0.3s;
+}
+
+.footer-links a:hover {
+  color: #4caf50;
+}
+
+.social-media {
+  margin-top: 10px;
+}
+
+.social-media a {
+  color: white;
+  margin: 0 10px;
+  font-size: 1.5em;
+  transition: color 0.3s;
+}
+
+.social-media a:hover {
+  color: #4caf50;
 }
