--- a/styles/login_sign-up.css
+++ b/styles/login_sign-up.css
@@ -103,17 +103,19 @@ input:focus {
   box-shadow: 0 1px 0 rgba(0, 0, 0, 0.2);
 }
 
+button,
 input.button {
   color: #fff;
   background: var(--button-bg);
   font-size: 1.2rem;
   font-weight: 500;
   letter-spacing: 1px;
-  margin-top: 15px;
+  /* margin-top: 15px; */
   cursor: pointer;
   transition: 0.4s;
 }
 
+button:hover,
 input.button:hover {
   background: var(--button-bg-hover);
 }
@@ -126,6 +128,7 @@ a {
 a:hover {
   text-decoration: underline;
 }
-.signup{
+
+.signup {
   margin-bottom: 5rem;
 }
