--- a/styles/insight.css
+++ b/styles/insight.css
@@ -3,10 +3,17 @@ main {
 }
 
 /* Insights Section */
+
+body {
+  background-image: url("../assets/insights.jpeg");
+  background-size: cover; /* Scales the image to cover the entire area */
+  background-position: center; /* Centers the image */
+  background-repeat: no-repeat; /* Prevents the image from repeating */
+}
+
 .insight {
   border-radius: 8px;
-  box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
-  border-radius: 8px;
+  box-shadow: 0 2px 5px rgb(255, 251, 251);
   margin-bottom: 20px;
   display: flex;
   flex-direction: column;
@@ -22,11 +29,12 @@ main {
 .insight header h2 {
   width: 100%;
   text-align: center;
+  color: #f5deb3;
 }
 
 .insight header p {
   font-size: large;
-  color: black;
+  color: rgb(255, 247, 247);
 }
 
 .insight-list {
@@ -45,13 +53,15 @@ main {
   flex: 1;
   border-radius: 1rem;
   transition: transform 0.3s ease, box-shadow 0.3s ease;
-  box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.2);
   padding: 1rem;
+  border: 2px solid white; /* Customize border color and width */
+  background-color: white; /* Makes the inside of the border white */
+  color: black; /* Set the text color */
 }
 
 .insight-card:hover {
   transform: translateY(-0.5rem);
-  box-shadow: 0px 8px 16px rgba(0, 0, 0, 0.5);
+  box-shadow: 0px 8px 16px rgb(34, 209, 104);
 }
 
 .insight-card h3 {
@@ -92,13 +102,13 @@ main {
   .container {
     padding: 5rem 1rem;
   }
-    .insight header {
-      padding: 0 1%;
-    }
-    .insight-list {
-      display: grid;
-      grid-template-columns: repeat(1, 1fr);
-      gap: 2rem;
-      margin: 2rem 0rem;
-    }
+  .insight header {
+    padding: 0 1%;
+  }
+  .insight-list {
+    display: grid;
+    grid-template-columns: repeat(1, 1fr);
+    gap: 2rem;
+    margin: 2rem 0rem;
+  }
 }
