--- a/styles/style.css
+++ b/styles/style.css
@@ -1,5 +1,6 @@
 /* Import Google font - Poppins */
 @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@200;300;400;500;600;700&display=swap');
+
 * {
   margin: 0;
   padding: 0;
@@ -151,11 +152,31 @@ header nav ul li:last-child a {
 }
 
 /* Header logo style */
+header .logo a,
 header .logo img {
   width: 4rem;
 }
 
 /* Header profile image style */
+header .user-profile {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+}
+header .user-profile i {
+  font-size: 3rem;
+  color: var(--button-bg);
+  border: 3px solid var(--button-bg);
+}
+
+header .user-profile i:hover {
+  color: var(--button-bg-hover);
+  transform: scale(1.1);
+  overflow: hidden;
+  border-radius: 50%;
+}
+
 header .user-profile img {
   width: 3rem;
   border-radius: 50%;
