--- a/styles/contactUs.css
+++ b/styles/contactUs.css
@@ -157,7 +157,7 @@ input[type="email"] {
   width: 100%; /* Full width of the container */
   height: 40px; /* Height of the field */
   padding: 6px 8px; /* Add padding for better readability */
-  font-size: 16px; /* Increase font size if needed */
+  font-size: 16px; 
   border-radius: 6px;
   border: 1px solid var(--dark-green-bg);
 }
