removing unnecessary commits from contact us css

--- a/styles/contactUs.css
+++ b/styles/contactUs.css
@@ -156,7 +156,7 @@ input[type="text"],
 input[type="email"] {
   width: 100%; /* Full width of the container */
   height: 40px; /* Height of the field */
-  padding: 6px 8px; /* Add padding for better readability */
+  padding: 6px 8px;
   font-size: 16px; 
   border-radius: 6px;
   border: 1px solid var(--dark-green-bg);
