--- a/styles/dieticians.css
+++ b/styles/dieticians.css
@@ -1,7 +1,7 @@
 body {
   background-color: #ffffff;
   display: flex; /* Enables flexbox on the body */
-  justify-content: center; /* Centers content horizontally */
+  justify-content: center;
   align-items: center; /* Centers content vertically */
   height: 100vh; /* Full viewport height */
   margin: 0;
