--- a/styles/contactUs.css
+++ b/styles/contactUs.css
@@ -139,7 +139,7 @@ h1 {
   text-align: center;
 }
 .contact-container {
-  border: 2px solid ;
+  border: 2px solid;
   background-color: rgba(255, 255, 255, 0.1);
   text-align: left;
   padding: 120px 50px 30px 50px;
@@ -156,7 +156,7 @@ input[type="email"] {
   width: 100%; /* Full width of the container */
   height: 40px; /* Height of the field */
   padding: 6px 8px;
-  font-size: 16px; 
+  font-size: 16px;
   border-radius: 6px;
   border: 1px solid var(--dark-green-bg);
 }
@@ -175,8 +175,13 @@ input[type="submit"] {
 }
 
 #message {
-  padding: 50px 7px;
-  text-align: left;
+  padding: 5px; /* Inner padding */
+  width: 100%;
+  height: 120px;
+  text-align: justify;
+  line-height: 1.5;
+  overflow-wrap: break-word; /* Ensures long words wrap */
+  resize: none; /* Dissallows people from resizing */
 }
 
 /* ============================= FOOTER SECTION
